# potential-minigrid-explorer

./: .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile  Dockerfile.testing  LICENSE  README.md  dbtest.env  docker-compose.github-workflows.yml  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/PROJECTNAME-run-everything/: devcontainer.json
.devcontainer/minimal/: devcontainer.json
.devcontainer/potential-minigrid-explorer-run-everything/: devcontainer.json  docker-compose.yml
.devcontainer/simple/: docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: deploy-testing.yml
charts/dec-potential-minigrid-explorer-chart/: .helmignore  Chart.yaml
charts/dec-potential-minigrid-explorer-chart/templates/: backend_api_deployment.yaml  backend_api_ingressroute.yaml  backend_api_service.yaml  db_deployment.yaml  db_pv.yaml  db_pvc.yaml  db_service.yaml  pgadmin_deployment.yaml  pgadmin_ingressroute.yaml  pgadmin_pvc.yaml  pgadmin_service.yaml  secrets.yaml
database/postgres-setup.d/: 01-create-role-db-owner.sql  02-create-database.sql  03-create-extensions.sql  04-create-role-api-service.sql  05-create-namespace.sql  06-grant-privileges-to-api-service.sql  README.md
enviroments/testing/: helm-values.yaml
environments/testing/: helm-values.yaml
src/PUT_APP_NAME_HERE/: __init__.py
src/app/: explorations.py  main.py  main_debug.py  potential_engine.py  projects.py  settings.py  simulations.py  utils.py
src/app/categories/: api.py  domain.py
src/app/db/: core.py  helpers.py
src/app/explorations/: api.py  clustering.py  domain.py  plotting.py
src/app/features/: api.py  domain.py
src/app/general/: api.py
src/app/grid/: domain.py
src/app/monitoring/: api.py  domain.py  sds_client.py  utils.py
src/app/profiles/: api.py  domain.py
src/app/service_offgrid_planner/: demand.py  grid.py  results.py  service.py  supply.py
src/app/service_offgrid_planner/json_schema/: energy_system_design.json  energy_system_design_new_epc.json  grid_design.json  grid_design_new_epc.json  grid_input.json  grid_input.py  grid_output.json  grid_output.py  supply_input.json  supply_input.py  supply_output.json  supply_output.py
src/app/service_renewables_ninja/: service.py
src/app/service_rli_weather/: service.py
src/app/shared/: bounding_box.py  geography.py
src/scripts/: db_load_data.py  db_populate.py  db_recreate_exploration_tables.py  db_run_sql_files.py
src/scripts/default_data/: db_data.json  db_data.py
src/scripts/generators/: populate_db.py
src/tests/examples/: grid_output_example.json  supply_opt_json.json  supply_output_example.json
src/tests/pgadmin_config/: servers.json
tests/examples/: grid_input_example.json  grid_opt_json.json  supply_input_example.json  supply_output_example.json
tests/scripts/: create_and_stop_many_explorations.py  demand_and_grid_inputs.py
